{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 22,
  "lineage": "bcc4ac5d-c64c-43db-e8f3-51d3a80950e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145400477368:internet-gateway/igw-06863ff5e07f141b1",
            "id": "igw-06863ff5e07f141b1",
            "owner_id": "145400477368",
            "tags": {
              "Name": "gestaopedidos-igw"
            },
            "tags_all": {
              "Name": "gestaopedidos-igw"
            },
            "vpc_id": "vpc-0fec58f7776cb24a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145400477368:route-table/rtb-09a99210d6b275150",
            "id": "rtb-09a99210d6b275150",
            "owner_id": "145400477368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06863ff5e07f141b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gestaopedidos-public-rt"
            },
            "tags_all": {
              "Name": "gestaopedidos-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fec58f7776cb24a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeccd36c15be26fb",
            "route_table_id": "rtb-09a99210d6b275150",
            "subnet_id": "subnet-012ccaeb1d3bc2403"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0838e591e9e0d2019",
            "route_table_id": "rtb-09a99210d6b275150",
            "subnet_id": "subnet-06eb82ef9a8035f75"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145400477368:security-group/sg-0898c4fd51814b350",
            "description": "Security Group do RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0898c4fd51814b350",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "gestaopedidos-rds-sg",
            "name_prefix": "",
            "owner_id": "145400477368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gestaopedidos-rds-sg"
            },
            "tags_all": {
              "Name": "gestaopedidos-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fec58f7776cb24a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145400477368:subnet/subnet-012ccaeb1d3bc2403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012ccaeb1d3bc2403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145400477368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gestaopedidos-public-1"
            },
            "tags_all": {
              "Name": "gestaopedidos-public-1"
            },
            "vpc_id": "vpc-0fec58f7776cb24a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145400477368:subnet/subnet-06eb82ef9a8035f75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eb82ef9a8035f75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145400477368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gestaopedidos-public-2"
            },
            "tags_all": {
              "Name": "gestaopedidos-public-2"
            },
            "vpc_id": "vpc-0fec58f7776cb24a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145400477368:vpc/vpc-0fec58f7776cb24a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb7320d8b35ebdf8",
            "default_route_table_id": "rtb-0fa7c6a1f8dde3444",
            "default_security_group_id": "sg-00181f1617663d692",
            "dhcp_options_id": "dopt-048efc5b7927ce123",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fec58f7776cb24a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa7c6a1f8dde3444",
            "owner_id": "145400477368",
            "tags": {
              "Name": "gestaopedidos-vpc"
            },
            "tags_all": {
              "Name": "gestaopedidos-vpc"
            }
          }
        }
      ]
    }
  ]
}